# Zens

./: .env.example  .gitattributes  .gitignore  ANSWER_ADOPTION_UI_COMPLETION.md  Dockerfile  FINAL_DELIVERY_REPORT.md  FINAL_FIX_REPORT_ADOPT_BUTTON.md  FINAL_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION_ROUND2.md  README.md  ReadMe.md  check-campus-pulse.ps1  deploy-subsites.sh  generate_test_data.py  large_test_data.sql  pom.xml  tmp_thesis76_ascii.docx  ~$p_thesis76_ascii.docx  附件2：绥化学院毕业论文撰写样张2026.doc
.codex-work/: refine_thesis7_specific.ps1  update_thesis7.ps1
.playwright-mcp/: page-2026-04-11T08-23-05-999Z.yml  page-2026-04-15T07-46-08-755Z.yml
agent-service/: .env.example  .gitignore  Dockerfile  README.md  requirements.txt
campus-lottery-station/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  (+5 more)
zens-ops-service/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
zens-ops-service/deploy/: zens-ops-health.service  zens-ops-health.timer  zens-ops.service
zens-ops-service/tests/: test_config.py  test_hmac_contract.py  test_metrics.py  test_operations_workflows.py  test_service_safety.py  test_writer.py
zens-ops-service/zens_ops/: __init__.py  api.py  cli.py  config.py  logging.py  models.py  scheduler.py  service.py
zens-ops-service/zens_ops/clients/: __init__.py  http.py
zens-ops-service/zens_ops/features/: __init__.py  engagement.py  metrics.py  topic_planner.py  weekly_digest.py  writer.py
(+1456 files in other folders)
